Auto packaging complete!

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
-AC_INIT([Moldeo Samples], [1.1.0.1], [info@moldeointeractive.com.ar], [moldeosamples])
+AC_INIT([Moldeo Samples], [1.1.0.7], [info@moldeointeractive.com.ar], [moldeosamples])
 
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([foreign])
 AC_CONFIG_MACRO_DIR([m4])
 AM_CONFIG_HEADER(config.h)
 
@@ -72,4 +72,8 @@ Makefile
 basic/Makefile
 taller/Makefile
 samples/Makefile
+midi/Makefile
+scripting/Makefile
+sound/Makefile
+kinect/Makefile
 ])
