--- a/taller/Makefile.am
+++ b/taller/Makefile.am
@@ -1,4 +1,3 @@
-
 datadir = ${prefix}/share/moldeo
 fontsdir = ${datadir}/fonts
 cursorsdir = ${datadir}/cursors
@@ -7,34 +6,48 @@ desktopdir = ${prefix}/share/applications
 pixmapsdir = ${prefix}/share/pixmaps
 testdir = ${datadir}/test
 testsimpledir = ${testdir}
-tallerdir = ${datadir}/taller
-s0dir = ${tallerdir}/Basico
-s0rdir = ${tallerdir}/Basico/RECURSOS
-s0pdir = ${tallerdir}/Basico/previewshots
-s1dir = ${tallerdir}/ChatInteractivo
-s1hdir = ${tallerdir}/ChatInteractivo/haarcascades
-s1pdir = ${tallerdir}/ChatInteractivo/previewshots
-s2dir = ${tallerdir}/CicloDelAgua
-s2pdir = ${tallerdir}/CicloDelAgua/previewshots
-s3dir = ${tallerdir}/Collage_Animado
-s3pdir = ${tallerdir}/Collage_Animado/previewshots
-s4dir = ${tallerdir}/Elemental
-s4pdir = ${tallerdir}/Elemental/previewshots
-s5dir = ${tallerdir}/VisualArt
-s5pdir = ${tallerdir}/VisualArt/previewshots
 
-dist_s0_DATA = Basico/*.*
-dist_s0r_DATA = Basico/RECURSOS/*.*
-dist_s0p_DATA = Basico/previewshots/*.*
-dist_s1_DATA = ChatInteractivo/*.*
-dist_s1h_DATA = ChatInteractivo/haarcascades/*.*
-dist_s1p_DATA = ChatInteractivo/previewshots/*.*
-dist_s2_DATA = CicloDelAgua/*.*
-dist_s2p_DATA = CicloDelAgua/previewshots/*.*
-dist_s3_DATA = Collage_Animado/*.*
-dist_s3p_DATA = Collage_Animado/previewshots/*.*
-dist_s4_DATA = Elemental/*.*
-dist_s4p_DATA = Elemental/previewshots/*.*
-dist_s5_DATA = VisualArt/*.*
-dist_s5p_DATA = VisualArt/previewshots/*.*
+basicdir = ${datadir}/taller
+
+tallerCollageAnimadodir = ${basicdir}/Collage_Animado
+dist_tallerCollageAnimado_DATA = Collage_Animado/*.*
+
+tallerCollageAnimadopreviewshotsdir = ${basicdir}/Collage_Animado/previewshots
+dist_tallerCollageAnimadopreviewshots_DATA = Collage_Animado/previewshots/*.*
+
+tallerVisualArtdir = ${basicdir}/VisualArt
+dist_tallerVisualArt_DATA = VisualArt/*.*
+
+tallerVisualArtpreviewshotsdir = ${basicdir}/VisualArt/previewshots
+dist_tallerVisualArtpreviewshots_DATA = VisualArt/previewshots/*.*
+
+tallerElementaldir = ${basicdir}/Elemental
+dist_tallerElemental_DATA = Elemental/*.*
+
+tallerElementalpreviewshotsdir = ${basicdir}/Elemental/previewshots
+dist_tallerElementalpreviewshots_DATA = Elemental/previewshots/*.*
+
+tallerChatInteractivodir = ${basicdir}/ChatInteractivo
+dist_tallerChatInteractivo_DATA = ChatInteractivo/*.*
+
+tallerChatInteractivopreviewshotsdir = ${basicdir}/ChatInteractivo/previewshots
+dist_tallerChatInteractivopreviewshots_DATA = ChatInteractivo/previewshots/*.*
+
+tallerChatInteractivohaarcascadesdir = ${basicdir}/ChatInteractivo/haarcascades
+dist_tallerChatInteractivohaarcascades_DATA = ChatInteractivo/haarcascades/*.*
+
+tallerCicloDelAguadir = ${basicdir}/CicloDelAgua
+dist_tallerCicloDelAgua_DATA = CicloDelAgua/*.*
+
+tallerCicloDelAguapreviewshotsdir = ${basicdir}/CicloDelAgua/previewshots
+dist_tallerCicloDelAguapreviewshots_DATA = CicloDelAgua/previewshots/*.*
+
+tallerBasicodir = ${basicdir}/Basico
+dist_tallerBasico_DATA = Basico/*.*
+
+tallerBasicoRECURSOSdir = ${basicdir}/Basico/RECURSOS
+dist_tallerBasicoRECURSOS_DATA = Basico/RECURSOS/*.*
+
+tallerBasicopreviewshotsdir = ${basicdir}/Basico/previewshots
+dist_tallerBasicopreviewshots_DATA = Basico/previewshots/*.*
 
