ok camera.cfg using default

--- a/basic/08_Camera/camera.cfg
+++ b/basic/08_Camera/camera.cfg
@@ -40,7 +40,7 @@
         </PARAM>
         <PARAM name="camera" type="TEXT" property="published" options="default">
             <VAL>
-                <D type="TXT">/dev/video0</D>
+                <D type="TXT">default</D>
             </VAL>
         </PARAM>
         <PARAM name="color_format" type="NUM" property="published" options="default,yuv,rgb">
