Missing image in image

--- a/basic/00_Image/image.cfg
+++ b/basic/00_Image/image.cfg
@@ -38,10 +38,10 @@
         </PARAM>
         <PARAM name="texture" type="TEXTURE" property="published">
             <VAL>
-                <D type="TXT">Purple_Pink_Horizontal_Lines.jpg</D>
+                <D type="TXT">default</D>
             </VAL>
             <VAL>
-                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+                <D type="TXT">default</D>
             </VAL>
             <VAL>
                 <D type="TXT">default</D>
